--- a/21BDS0083_eda_mod3.ipynb
+++ b/21BDS0083_eda_mod3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMxJ1tCurV0Wdwh5CuUGLMH",
+      "authorship_tag": "ABX9TyM2xcgIhWISc/kvmkpzf7fb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,6 +45,15 @@
       ],
       "metadata": {
         "id": "HXdKXGxY8PS2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Data Cleaning"
+      ],
+      "metadata": {
+        "id": "2qyXl9oBAQ8O"
       }
     },
     {
@@ -150,6 +159,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Module 3:Correlation Analysis and Time SeriesAnalysis"
+      ],
+      "metadata": {
+        "id": "S4mfdLfJAafM"
+      }
     },
     {
       "cell_type": "code",
@@ -444,7 +462,7 @@
         "id": "_QNc1A7qCjgG",
         "outputId": "6f3c7dce-b8ca-476f-d9f5-a3aa3073dba0"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
