--- a/21BDS0083_eda_mod1.ipynb
+++ b/21BDS0083_eda_mod1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOlA/sLEp7y5q2Gb8bmyhd9",
+      "authorship_tag": "ABX9TyPDfm3n/u7LSSWsyoYJ1j+y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,8 +48,17 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Module 1: Introduction to Exploratory Data Analysis"
+      ],
+      "metadata": {
+        "id": "ztsk9943wDxQ"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
